Add Fibonacci function

--- a/prompting-examples/index.html
+++ b/prompting-examples/index.html
@@ -10,14 +10,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Prompting Examples</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.7.3/tailwind.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.7/tailwind.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1>Prompting Examples</h1>
-    <p>Click the button to prompt the user for their name.</p>
-    <button id="prompt-button">Prompt</button>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="prompting.js"></script>
+    <p>Click the button below to see a prompt</p>
+    <button id="prompt-button">Click Me</button>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="main.js"></script>
+    
 </body>
-</html>
